--- a/package.json
+++ b/package.json
@@ -5,5 +5,22 @@
   "main": "index.js",
   "repository": "git@github.com:henderea/jse.git",
   "author": "Eric Henderson <henderea@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "pkg:clean": "rm -rf pkg",
+    "pkg:jse": "pkg pkg-config/jse.config.json --out-path pkg",
+    "pkg": "yarn pkg:clean && yarn pkg:jse"
+  },
+  "bin": {
+    "jse": "./bin/jse.js"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "inquirer": "^6.2.0",
+    "lodash": "^4.17.11",
+    "yargs": "^12.0.2"
+  },
+  "devDependencies": {
+    "pkg": "^4.3.4"
+  }
 }
