fix some missing semicolons and some issues with the pkg compatibility

--- a/pkg-config/jse.config.json
+++ b/pkg-config/jse.config.json
@@ -7,6 +7,6 @@
             "node10-linux-x64"
         ],
         "scripts": "../lib/**/*.js",
-        "resources": "../resources/**/*.*"
+        "assets": "../resources/**/*.*"
     }
 }
