--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "inquirer": "^6.2.0",
+    "keytar": "^4.3.0",
     "lodash": "^4.17.11",
     "yargs": "^12.0.2"
   },
