--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jse",
-  "version": "1.0.0",
+  "name": "@henderea/jse",
+  "version": "0.0.1",
   "description": "JavaScript Executor",
   "main": "index.js",
   "repository": "git@github.com:henderea/jse.git",
@@ -19,6 +19,7 @@
     "inquirer": "^6.2.0",
     "keytar": "^4.3.0",
     "lodash": "^4.17.11",
+    "shell-escape-tag": "^1.2.2",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
