--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "core-js": "^2.5.7",
     "inquirer": "^6.2.0",
     "keytar": "^4.3.0",
     "lodash": "^4.17.11",
