--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.0.1",
     "inquirer": "^6.3.1",
     "lodash": "^4.17.11",
+    "natural-orderby": "^2.0.3",
     "pkg": "^4.3.7",
     "yargs": "^13.2.2"
   }
