--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "jse": "./bin/jse.js"
   },
   "dependencies": {
-    "keytar": "^4.11.0"
+    "keytar": "^5.0.0-beta.0"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.20.4",
     "any-shell-escape": "^0.1.1",
     "chalk": "^2.4.2",
-    "core-js": "^3.1.4",
-    "inquirer": "^6.5.0",
-    "lodash": "^4.17.14",
+    "core-js": "^3.2.1",
+    "inquirer": "^6.5.1",
+    "lodash": "^4.17.15",
     "natural-orderby": "^2.0.3",
     "pkg": "^4.4.0",
     "yargs": "^13.3.0"
