--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@henderea/jse",
-  "version": "0.3.12",
+  "version": "0.3.13",
   "description": "JavaScript Executor",
   "main": "dist/index.js",
   "repository": "git@github.com:henderea/jse.git",
@@ -17,7 +17,7 @@
     "prepublishOnly": "yarn ncc:build"
   },
   "bin": {
-    "jse": "./bin/jse.js"
+    "jse": "bin/jse.js"
   },
   "dependencies": {
     "keytar": "^7.3.0"
