--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "inquirer": "^8.1.2",
     "lodash": "^4.17.21",
     "natural-orderby": "^2.0.3",
-    "yargs": "^17.0.1"
+    "yargs": "16.2.0"
   },
   "eslintConfig": {
     "extends": "henderea",
