strip out all prompting (and the inquirer module) and all password handling (and the keytar module), replace chalk with @henderea/simple-colors, enhance the API to support setting the working directory, enable getting system variables, and switch the code to ESM

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "ncc:build": "yarn ncc:build:release",
     "ncc:clean": "rm -rf dist",
     "ncc:post-clean": "rm -rf dist/**/*.hbs && rm -rf dist/**/locales",
-    "ncc:build:release:build:cli": "ncc build src/jse.js -m -q -e keytar -o dist/cli",
-    "ncc:build:debug:build:cli": "ncc build src/jse.js -q -e keytar -o dist/cli",
-    "ncc:build:release:build:api": "ncc build src/api.js -m -q -e keytar -o dist/api",
-    "ncc:build:debug:build:api": "ncc build src/api.js -q -e keytar -o dist/api",
+    "ncc:build:release:build:cli": "my-ncc src/jse.mjs -m -q -o dist/cli",
+    "ncc:build:debug:build:cli": "my-ncc src/jse.mjs -q -o dist/cli",
+    "ncc:build:release:build:api": "my-ncc src/api.mjs -m -q -o dist/api",
+    "ncc:build:debug:build:api": "my-ncc src/api.mjs -q -o dist/api",
     "ncc:build:release": "yarn ncc:clean && yarn ncc:build:release:build:cli && yarn ncc:build:release:build:api && yarn ncc:post-clean",
     "ncc:build:debug": "yarn ncc:clean && yarn ncc:build:debug:build:cli && yarn ncc:build:debug:build:api && yarn ncc:post-clean",
     "prepublishOnly": "yarn ncc:build",
@@ -24,18 +24,15 @@
   "bin": {
     "jse": "bin/jse.js"
   },
-  "dependencies": {
-    "keytar": "^7.7.0"
-  },
   "devDependencies": {
-    "@vercel/ncc": "^0.28.6",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@henderea/my-ncc": "^1.1.0",
+    "@henderea/simple-colors": "^1.5.0",
     "any-shell-escape": "^0.1.1",
-    "babel-eslint": "^10.1.0",
-    "chalk": "^4.1.1",
-    "core-js": "^3.15.2",
-    "eslint": "^7.30.0",
-    "eslint-config-henderea": "1.0.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint": "^7.32.0",
+    "eslint-config-henderea": "1.0.4",
+    "eslint-plugin-import": "^2.24.1",
     "inquirer": "^8.1.2",
     "lodash": "^4.17.21",
     "natural-orderby": "^2.0.3",
