--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.15.0",
-    "@henderea/my-ncc": "^1.1.0",
-    "@henderea/simple-colors": "^1.5.0",
+    "@henderea/my-ncc": "^1.3.1",
+    "@henderea/simple-colors": "^2.0.2",
     "any-shell-escape": "^0.1.1",
+    "escalade": "^3.1.1",
     "eslint": "^7.32.0",
-    "eslint-config-henderea": "1.0.6",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-config-henderea": "1.0.7",
+    "eslint-plugin-import": "^2.24.2",
     "inquirer": "^8.1.2",
     "lodash": "^4.17.21",
     "natural-orderby": "^2.0.3",
