--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "@henderea/jse",
   "version": "0.7.4",
   "description": "JavaScript Executor",
-  "main": "dist/api/index.js",
+  "main": "dist/api/index.mjs",
   "types": "types.d.ts",
   "repository": "git@github.com:henderea/jse.git",
   "author": "Eric Henderson <henderea@gmail.com>",
   "license": "MIT",
-  "exports": {
-    "default": "./dist/api/index.mjs"
-  },
   "scripts": {
     "ncc:build": "yarn ncc:build:release",
     "ncc:clean": "rm -rf dist",
