--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "engineStrict": true,
   "scripts": {
     "assets:build": "build-assets",
-    "ncc:build": "yarn ncc:build:release",
+    "ncc:build": "npm run ncc:build:release",
     "ncc:clean": "rm -rf dist",
     "ncc:post-clean": "rm -rf dist/**/*.hbs && rm -rf dist/**/locales",
     "ncc:build:release:build:cli": "ncc build src/jse.mjs -m -q -o dist/cli",
     "ncc:build:debug:build:cli": "ncc build src/jse.mjs -q -o dist/cli",
     "ncc:build:release:build:api": "ncc build src/api.mjs -m -q -o dist/api",
     "ncc:build:debug:build:api": "ncc build src/api.mjs -q -o dist/api",
-    "ncc:build:release": "yarn assets:build && yarn ncc:clean && yarn ncc:build:release:build:cli && yarn ncc:build:release:build:api && yarn ncc:post-clean",
-    "ncc:build:debug": "yarn assets:build && yarn ncc:clean && yarn ncc:build:debug:build:cli && yarn ncc:build:debug:build:api && yarn ncc:post-clean",
-    "prepublishOnly": "yarn ncc:build",
+    "ncc:build:release": "npm run assets:build && npm run ncc:clean && npm run ncc:build:release:build:cli && npm run ncc:build:release:build:api && npm run ncc:post-clean",
+    "ncc:build:debug": "npm run assets:build && npm run ncc:clean && npm run ncc:build:debug:build:cli && npm run ncc:build:debug:build:api && npm run ncc:post-clean",
+    "prepublishOnly": "npm run ncc:build",
     "lint": "eslint --ext .js,.mjs bin src lib",
     "lint:fix": "eslint --ext .js,.mjs --fix bin src lib"
   },
